-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.6.0, Lustre 2.5.1
-
3
-
12182
This issue was created by maloo for Nathaniel Clark <nathaniel.l.clark@intel.com>
This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/788a5dda-765f-11e3-b3c0-52540035b04c.
The sub-test test_402 failed with the following error:
Copytool start should have failed
Info required for matching: sanity-hsm 402
- is related to
-
LU-5321 sanity-hsm test_402: Copytool start should have failed
-
- Closed
-