lustre/utils/lhsmtool_posix.c
@@ -1844,7 +1844,7 @@ static int ct_setup(void)
 	if (rc < 0) {
 		CT_ERROR(rc, "cannot find a Lustre filesystem mounted at '%s'",
 			 opt.o_mnt);
-		return -rc;
+		return rc;
 	}
 
 	return rc;
@@ -1877,7 +1877,9 @@ int main(int argc, char **argv)
 		return -rc;
 	}
 
-	ct_setup();
+	rc = ct_setup();
+	if (rc < 0)
+		goto error_cleanup;
 
 	switch (opt.o_action) {
 	case CA_IMPORT:
@@ -1899,6 +1901,7 @@ int main(int argc, char **argv)
 			 " rc=%d (%s)", err_major, err_minor, rc,
 			 strerror(-rc));
 
+error_cleanup:
 	ct_cleanup();
 
 	return -rc;
